--- a/main.css
+++ b/main.css
@@ -246,3 +246,16 @@ button:hover {
     padding: 8px 16px;
   }
 }
+
+/* tECLADO MOBILE  */
+
+
+#mobile-input {
+  padding: 10px;
+  font-size: 16px;
+  border: 2px solid #6a4f99;
+  border-radius: 5px;
+  margin: 10px auto;
+  display: block;
+}
+
